# peon-lib

./: .env.example  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  README_zh.md  permissions_example.txt
.gemini/: skills
.skills/gemini-api/: SKILL.md
.skills/gemini-api/agents/: openai.yaml
.skills/roll-dice/: SKILL.md
docs/: 001-runtime-io-env-strategy.md  002-rig-tool-context-limitations.md  003-peon-runtime-spec.md  004-multimodal-api-specs.md  ADVANCED_SECURITY_AUDIT.md
examples/: agent.rs  simple_agent.rs
peon-cli/: .env.example  Cargo.toml  README.md  README.zh-CN.md  README.zh.md
peon-cli/src/: main.rs
peon-core/: .env.example  Cargo.toml  README.md  README.zh-CN.md  README.zh.md  file_permissions.txt
peon-core/docs/: security_architecture.md
peon-core/examples/: simple_agent.rs
peon-core/src/: agent.rs  enforcer.rs  lib.rs  scanner.rs  setup.rs  tools.rs  user_enforcer_model.conf
peon-core/tests/: adversarial.rs
peon-line/: .env.example  Cargo.toml  README.md  README.zh-TW.md
peon-line/src/: handler.rs  main.rs  tools.rs
peon-runtime/: .env.example  Cargo.toml  README.md  README.zh.md
peon-runtime/examples/: simple_chat.rs  tool_call.rs
peon-runtime/src/: agent.rs  context.rs  error.rs  lib.rs  message.rs  provider.rs  tool.rs
peon-runtime/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
peon-telegram/: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  README.zh.md
peon-telegram/docs/: teloxide-inputs-outputs-reference.md
peon-telegram/src/: main.rs  tools.rs
skills/read-file/: SKILL.md
skills/roll-dice/scripts/: roll.sh
src/: agent.rs  any_model.rs  enforcer.rs  lib.rs  main.rs  model.conf  peon_model.rs  scanner.rs  tools.rs  user_permissions.csv
tests/: adversarial.rs
