[package]
name = "peon-lib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "peon_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
log = "0.4"
thiserror = "2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "process", "fs"] }
rig-core = "0.33.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
proptest = "1"

[features]
default = ["all"]

# Individual provider features
anthropic = []
azure = []
cohere = []
deepseek = []
galadriel = []
gemini = []
groq = []
huggingface = []
hyperbolic = []
llamafile = []
mira = []
mistral = []
moonshot = []
ollama = []
openai = []
openrouter = []
perplexity = []
together = []
xai = []

# Meta feature: enable all providers
all = [
    "anthropic",
    "azure",
    "cohere",
    "deepseek",
    "galadriel",
    "gemini",
    "groq",
    "huggingface",
    "hyperbolic",
    "llamafile",
    "mira",
    "mistral",
    "moonshot",
    "ollama",
    "openai",
    "openrouter",
    "perplexity",
    "together",
    "xai",
]
