[workspace]
members = ["peon-core", "peon-cli", "peon-telegram", "peon-line"]

[package]
name = "peon-lib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "peon_lib"
path = "src/lib.rs"

[dependencies]
peon-core = { path = "peon-core" }
anyhow = "1.0.98"

[features]
default = ["peon-core/default"]
anthropic = ["peon-core/anthropic"]
azure = ["peon-core/azure"]
cohere = ["peon-core/cohere"]
deepseek = ["peon-core/deepseek"]
galadriel = ["peon-core/galadriel"]
gemini = ["peon-core/gemini"]
groq = ["peon-core/groq"]
huggingface = ["peon-core/huggingface"]
hyperbolic = ["peon-core/hyperbolic"]
llamafile = ["peon-core/llamafile"]
mira = ["peon-core/mira"]
mistral = ["peon-core/mistral"]
moonshot = ["peon-core/moonshot"]
ollama = ["peon-core/ollama"]
openai = ["peon-core/openai"]
openrouter = ["peon-core/openrouter"]
perplexity = ["peon-core/perplexity"]
together = ["peon-core/together"]
xai = ["peon-core/xai"]
all = [
    "anthropic",
    "azure",
    "cohere",
    "deepseek",
    "galadriel",
    "gemini",
    "groq",
    "huggingface",
    "hyperbolic",
    "llamafile",
    "mira",
    "mistral",
    "moonshot",
    "ollama",
    "openai",
    "openrouter",
    "perplexity",
    "together",
    "xai",
]