[workspace]
members = ["peon-core", "peon-cli", "peon-runtime", "peon-telegram"]

[package]
name = "peon-lib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "peon_lib"
path = "src/lib.rs"

[dependencies]
peon-core = { path = "peon-core" }
anyhow = "1.0.98"

[features]
default = ["peon-core/default"]
native = ["peon-core/native"]
wasm = ["peon-core/wasm"]
