[package]
name = "peon-core"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The zero-trust engine driving the Peon workspace, providing dual-layer sandboxing and dynamic Casbin whitelisting."
repository = "https://github.com/stephen94125/peon-lib"

[lib]
name = "peon_core"
path = "src/lib.rs"

[dependencies]
peon-runtime = { version="0.1.1" }
anyhow = "1.0.98"
log = "0.4"
thiserror = "2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
casbin = "2.20.0"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
proptest = "1"

[features]
default = ["native"]
native = ["peon-runtime/native"]
wasm = ["peon-runtime/wasm"]
