[package]
name = "peon-line"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
peon-core = { path = "../peon-core" }
anyhow = "1.0.98"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
dotenvy = "0.15.7"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
rig-core = "0.33.0"
thiserror = "2.0"

[dependencies.line-bot-sdk-rust]
version = "3.0.0"
features = ["axum_support"]

[features]
default = ["peon-core/default"]
anthropic = ["peon-core/anthropic"]
azure = ["peon-core/azure"]
cohere = ["peon-core/cohere"]
deepseek = ["peon-core/deepseek"]
galadriel = ["peon-core/galadriel"]
gemini = ["peon-core/gemini"]
groq = ["peon-core/groq"]
huggingface = ["peon-core/huggingface"]
hyperbolic = ["peon-core/hyperbolic"]
llamafile = ["peon-core/llamafile"]
mira = ["peon-core/mira"]
mistral = ["peon-core/mistral"]
moonshot = ["peon-core/moonshot"]
ollama = ["peon-core/ollama"]
openai = ["peon-core/openai"]
openrouter = ["peon-core/openrouter"]
perplexity = ["peon-core/perplexity"]
together = ["peon-core/together"]
xai = ["peon-core/xai"]
all = ["peon-core/all"]
