[package]
name = "peon-runtime"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A runtime-agnostic agent execution engine with zero-trust context injection, multimodal messaging, and pluggable LLM providers."
repository = "https://github.com/stephen94125/peon-lib"

[lib]
name = "peon_runtime"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
dotenvy = "0.15"

[features]
default = ["native"]
native = ["dep:reqwest", "dep:dotenvy"]
wasm = []
